--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="fragment_text">This is a fragment</string>
     <string name="flexible_activity">Flexible Activity</string>
-
+    <string name="communicating_activity">Communicating Activity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_communicating">Communicating</string>
 </resources>
